--- a/TaskGraph/TaskGraph.vcxproj.filters
+++ b/TaskGraph/TaskGraph.vcxproj.filters
@@ -24,5 +24,11 @@
     <ClCompile Include="RValueReference.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TaskGraphMultiHandle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TaskGraphMultiWorker.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
